<resources>
    <string name="app_name">Home Teach</string>
    <string name="skip">Skip</string>
    <string name="on_boarding_avatar">On boarding avatar</string>
    <string name="on_boarding_text_1">Connect globally with many professional Teachers and instructors</string>
    <string name="on_boarding_text_2">Find and match interesting subjects needed by prospective students</string>
    <string name="on_boarding_text_3">Get taught on relevant topics and boost your knowledge</string>
    <string name="explore_select_one">Select One</string>
    <string name="explore_footer_text">Many Teachers and Students trusts our platform to create value,
        choose according to your need.</string>
    <string name="explore_tutor">Tutor</string>
    <string name="explore_student">Student</string>
    <string name="home_teach_logo_content_description">HomeTeach Logo Content Description</string>
    <string name="student_and_tutor_illustration_content_description">Student and Tutor Illustration Content Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Welcome, </string>
    <string name="upcoming_classes">Upcoming Classes</string>
    <string name="top_tutors">Top Tutors</string>
    <string name="view_all">view all</string>
    <string name="filter">Filter</string>
    <string name="rahman_djando">Rahman Djando</string>
    <string name="math_tutor">Math Tutor</string>
    <string name="alaye_chris">Alaye Chris</string>
    <string name="within_lga">Within LGA</string>
    <string name="grade_3">Grade 3</string>
    <string name="science">Science</string>
    <string name="maths">Maths</string>
    <string name="any">Any</string>
    <string name="search_view_text">Search for Teachers, Subjects, Topics etc.</string>
    <string name="log_in_textview">LOG IN</string>
    <string name="naira_symbol">\u20A6%.2f/hr</string>
    <string name="save_password_checkbox_text">Save password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="alternative_login_hint">Or login using social media</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register_button">Register now</string>
    <string name="email_input_field_hint">johndoe@example.com</string>
    <string name="password_input_field_hint">********</string>
    <string name="teach_textview">Teach</string>
    <string name="home_textview">Home</string>
    <string name="email_field_label">Email</string>
    <string name="password_field_label">Password</string>
    <string name="_9hrs_ago">9hrs ago</string>
    <string name="mark_essien_accepted_your_friend_request">Mark Essien Accepted Your Friend Request</string>
    <string name="new_">NEW</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="card_details">Card Details</string>
    <string name="payments">Payments</string>
    <string name="welcome">Welcome</string>
    <string name="rahman">Welcome  Rahman,</string>
    <string name="modify">MODIFY</string>
    <string name="since_last_month">Since last month</string>
    <string name="cancel_all">CANCEL ALL</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="please_enter_your_bank_information_below">Please enter your bank information below</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM / YY</string>
    <string name="please_enter_your_credit_card_information_below">Please enter your credit card information below</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="classes">Classes</string>
    <string name="approve">APPROVE</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">CONFIRM</string>
    <string name="full_name">Full name</string>
    <string name="description">Description</string>
    <string name="upload_a_30_second_video_about_yourself">Upload Your video,Image and Credential</string>
    <string name="upload">Upload</string>
    <string name="clear">Clear</string>
    <string name="file_must_not_be_more_than_30seconds_15mb">File must not be more than 30seconds/15mb</string>
    <string name="select_field">Select Field</string>
    <string name="major_course">Major Course</string>
    <string name="other_courses">Other Courses</string>
    <string name="separate_with">(separate with “,”)</string>
    <string name="state_of_origin">State of origin</string>
    <string name="address">Address</string>
    <string name="rate">Rate Per Hour</string>
    <string name="credentials">Credentials</string>
    <string name="rahman_djago_resume">Rahman Djago Resume</string>
    <string name="rahman_djago_cv">Rahman Djago CV</string>
    <string name="rahman_djago_letter">Rahman Djago Letter</string>
    <string name="save">Save</string>
    <string name="credential_icon">Credential icon</string>
    <string name="add_more">Add More…</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="document_image">Document image</string>
    <string name="add_more_image">Add more image</string>
    <string name="text_search">Search</string>
    <string name="text_view_all">View all</string>
    <string name="text_ongoing_classes">Ongoing Classes</string>
    <string name="text_payments">Payments</string>
    <string name="text_sign_out">SIGN OUT</string>
    <string name="hello_mr_rahman_how_are_doing_today">Hello Mr Rahman, how are doing today?</string>
    <string name="_12_00">12:00</string>
    <string name="hi_mr_sule_i_am_doing_great_how_are_you_too">Hi Mr Sule, I am doing great. How are you too?</string>
    <string name="type_your_message">Type your message</string>
    <string name="attach_file_icon">Attach file icon</string>
    <string name="send_message_icon">Send message icon</string>
    <string name="sandra_bullocks">Sandra Bullocks</string>
    <string name="profile_icon">Profile icon</string>
    <string name="password_recovery">Password recovery</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="submit">Submit</string>
    <string name="recover_password">Recover password</string>
    <string name="recover_using_email">Recover using email</string>
    <string name="recover_using_phone_number">Recover using phone number</string>
    <string name="apply">Apply</string>
    <string name="how_do_you_want_to_recover_your_password">How do you want to recover your password?</string>
    <string name="recover_your_registered_phone_number">Recover your registered phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="your_request_for_a_teacher_has_been_successfully_booked_and_awaiting_approval">Your request for a Teacher has been successfully booked and awaiting approval</string>
    <string name="thursday_june_5_2020_16_00_18_00">Thursday, June 5, 2020 16:00 – 18:00</string>
    <string name="congratulations">Congratulations</string>
    <string name="john_doe">John Doe</string>
    <string name="about">About</string>
    <string name="i_love_mathematics_and_data_science_looking_to_build_my_kids_and_myself_also">I love mathematics and data science looking to build my kids and myself also</string>
    <string name="_09030000000">09030000000</string>
    <string name="_34_lessons">0 lessons</string>
    <string name="price">Price</string>
    <string name="_12_students">0 student(s)</string>
    <string name="_16">(0)</string>
    <string name="interests_science_math_physics">Interests: Science, Math, Physics</string>
    <string name="available">Available</string>
    <string name="i_teach_with_calmness_and_encouragement_my_lessons_are_not_boring_and_i_can_accomodate_student_s_with_low_affinity_to_studying_i_employ_modern_schema_for_tutoring_with_interactive_guides_and_learning_systems_having_schooled_at_different_educational_organizations_coupled_with_my_nce_certifcate_i_can_assure_you_premium_success_with_me_as_your_home_teacher">I teach with calmness and encouragement. My lessons are not boring and i can accommodate student’s with low affinity to studying. I employ modern schema for tutoring with interactive guides and learning systems. Having schooled at different educational organizations coupled with my NCE certifcate, I can assure you premium success with me as your Home-Teacher.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_matched_with_prospective_teachers">Get matched with prospective Teachers</string>
    <string name="and_student_for_academics_skill_acquisition">and student for academics, skill acquisition</string>
    <string name="and_many_more">and many more.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_have_read_the">I have read the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="or_sign_up_using_social_media">Or sign up using social media</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="your_card_has_been_added">Your card has been added</string>
    <string name="rahman_django">Rahman Django</string>
    <string name="balance_215000_n">Balance 215000 N</string>
    <string name="your_saved_card">Your saved cards</string>
    <string name="add_new_card">Add new card</string>
    <string name="clear_all">Clear all</string>
    <string name="withdrawal_history">Withdrawal History</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="your_withdraw_order_is_successful_your_funds_would_be_sent_to_you_within_5_days">Your withdraw order is successful your funds would be sent to you within 5 days</string>
    <string name="your_bank_has_been_added">Your bank has been added</string>
    <string name="n2000_hr">N2000/hr</string>
    <string name="or_login_using_social_media">Or Login using social media</string>
    <string name="register_now">Register now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="save_password">Save Password</string>
    <string name="tutors_description">I teach with calmness and encouragement. My lessons are not boring and i can accommodate student’s with low affinity to studying. I employ modern schema for tutoring with interactive guides and learning systems. Having schooled at different educational organizations coupled with my NCE certificate, I can assure you premium success with me as your Home-Teacher</string>
    <string name="review">Mr Rahman Django is a great teacher. I was having tough times trying to get my son to understand maths for his upcoming exams but no progress. Mr Rahman put him through and he came out in flying colours</string>
    <string name="success">Your request for a Teacher has been successfully booked and awaiting approval</string>
    <string name="tutor_list">Tutor List</string>
    <string name="pick_a_date_and_time">Pick a date and time</string>
    <string name="from">From</string>
    <string name="over_five">%.1f/5</string>
    <string name="to">To</string>
    <string name="colon_sign">:</string>
    <string name="cancel_small">Cancel</string>
    <string name="approve_small">Approve</string>
    <string name="request_service">REQUEST \n SERVICE</string>
    <string name="card_number">Card Number</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="ellipsis">…</string>
    <string name="cvc">CVC</string>
    <string name="no_transaction">No Transaction</string>
    <string name="total_students">TOTAL STUDENTS</string>
</resources>