<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryLightColor"
        app:title="Add Bank Details"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel_btn_background"
            android:padding="5dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:id="@+id/user_image"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_image"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="Rahman Django "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/balance"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="Balance: 215000 N"/>
            </LinearLayout>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:src="@drawable/calimage"/>
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/acc_name"
        android:layout_marginTop="10dp"
        android:text="@string/please_enter_your_bank_information_below"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:hint="@string/account_name"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:hint="@string/routing_number"
        android:id="@+id/acc_route"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:hint="@string/account_number"
        android:id="@+id/acc_number"
        android:inputType="number"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:hint="@string/social_security_number"
        android:id="@+id/acc_security_number"
        android:layout_gravity="center"
        android:inputType="text"
        android:background="@drawable/edit_text_background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/save"
        android:background="@drawable/btn_background"
        android:text="@string/save"
        android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>